<resources>
    <string name="app_name">ERScheduler</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_initial">Initial Activity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="btn_login">Login</string>
    <string name="fragment_message">Message</string>
    <string name="login_fragment_title">Login</string>
    <string name="empty_login">Please enter username and password</string>
    <string name="no_spaces_allowed">Username and/or password can\'t contain spaces</string>
    <string name="login_error">Username and/or password are incorrect</string>
    <string name="login_in_progress">Please wait, we are logging you in...</string>
    <string name="home_fragment_title">Home</string>
    <string name="press_back_again_logout">Press back again to logout</string>
    <string name="logout_successful">Logout succcesful.</string>
    <string name="logout_token_error">Error with token for logout.</string>
    <string name="logout_error">Error with logout.</string>
    <string name="gcm_sender_id" translatable="false">898217512099</string>
    <!-- Project number -->
    <string name="base_fragment_title">Base Fragment</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_user">Korisnički podaci</string>
    <string name="tab_shifts">Dodijeljene smjene</string>
    <string name="tab_history">Povijest</string>
    <string name="shift_item_name">One Shift</string>
    <string name="shift_date">Date of dbShift</string>
    <string name="shift_time">Shift time</string>
    <string name="shift_central">Central</string>
    <string name="shift_team_mates">Team mate 1, team mate 2</string>
    <string name="sync_shifts">Sinkroniziraj smjene</string>
    <string name="toolbar_app_title">ER Scheduler</string>
    <string name="login_message">Prijava u sustav</string>
    <string name="no_jobs_error">Nema poslova</string>
    <string name="no_shift_message">Trenutno nema ni jedne definirane smjene</string>
    <string name="no_shift_history_message">Nema ni jedne smjene spremljene u povijesti</string>
    <string name="shifts_refreshed">Smjene osvježene</string>
    <string name="shifts_refresh_failure">Nije uspjelo osvježavanje smjena</string>
    <string name="day_shift">Dnevna smjena (08h-20h)</string>
    <string name="night_shift">Noćna smjena (20h-08h)</string>
    <string name="day_today">Danas</string>
    <string name="day_tomorrow">Sutra</string>
    <string name="job_doctor">Doktor</string>
    <string name="job_technician">Tehničar</string>
    <string name="job_driver">Vozač</string>
    <string name="job_dispacher">Dispečer</string>
    <string name="job_undefined">Nedefinirani posao</string>
    <string name="this_week">Ovaj tjedan</string>
    <string name="dot_week">. tjedan</string>
    <string name="day_sunday">Nedjelja</string>
    <string name="day_monday">Ponedjeljak</string>
    <string name="day_tuesday">Utorak</string>
    <string name="day_wendesday">Srijeda</string>
    <string name="day_thursday">Četvrtak</string>
    <string name="day_friday">Petak</string>
    <string name="day_saturday">Subota</string>
    <string name="day_undefined">Undefined day</string>
    <string name="last_refreshed">Zadnje osvježeno\n</string>
</resources>
