<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:focusableInTouchMode="true"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:layout_marginTop="130dp"
        android:paddingBottom="5dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="#ffffff"
            android:hint="@string/username"
            android:nextFocusDown="@+id/password"
            android:nextFocusRight="@+id/password"
            android:paddingLeft="30dp"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:layout_marginTop="2dp"
        android:paddingBottom="5dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="#ffffff"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="30dp"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="-5dp"
        android:layout_marginRight="-5dp"
        android:layout_marginTop="10dp"
        android:height="50dp"
        android:backgroundTint="#ffffff"
        android:backgroundTintMode="src_over"
        android:minHeight="50dp"
        android:stateListAnimator="@null"
        android:text="@string/btn_login"
        android:textColor="@color/accent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/TVMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/fragment_message"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/accent" />

</LinearLayout>